# data-gov-in-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  smithery.yaml
docs/: API.md
src/data_gov_in/: __init__.py  api_client.py  cache.py  config.py  exceptions.py  server.py
tests/: __init__.py  test_api_client.py  test_cache.py  test_config.py
